--- a/Webapp3/static/css/style.css
+++ b/Webapp3/static/css/style.css
@@ -14,6 +14,12 @@ main>section {
 .detail {
 	display: block;
 }
+#id {
+	display: inline-block;
+	width: 100px;
+	background-color: red;
+	color: red;
+}
 body {
 	background-color: #282828;
 	width: 80%;
